--- a/css/style.css
+++ b/css/style.css
@@ -168,4 +168,25 @@ header {
     color: #d25654;
 }
 
+/* -----------------footer--------------------- */
+footer {
+    height: 50px;
+    /* background-image: linear-gradient(to top, #141516, #1b1c1d, #232324, #2a2a2b, #323232); */
+    justify-content: space-between;
+}
+
+.footer-left, .footer-central, .footer-right {
+    text-align: center;
+    text-decoration: none;
+    width: 300px;
+    border: 1px solid;
+    background-color: blanchedalmond;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.btn-footer {
+    
+}
+
 
